force-app/main/default/objects/ARF_Personal_Guarantor__c/ARF_Personal_Guarantor__c.object-meta.xml
<CustomObject>
    <label>Personal Guarantor</label>
    <pluralLabel>Personal Guarantors</pluralLabel>
    <nameField>
        <label>Guarantor Number</label>
        <displayFormat>PG-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>