force-app/main/default/objects/ARF_Personal_Guarantor__c/fields/Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>Credit_Application__c</fullName>
    <label>Credit Application</label>
    <type>MasterDetail</type>
    <referenceTo>ARF_Credit_Application__c</referenceTo>
    <relationshipName>Personal_Guarantors</relationshipName>
    <relationshipLabel>Personal Guarantors</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>