force-app/main/default/objects/ARF_Personal_Guarantor__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <type>EncryptedText</type>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
</CustomField>